# rubik

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  run.sh
.github/workflows/: rust.yml
extra/: Rubik.desktop
src/: bound_cube.rs  cube.rs  get_cube.rs  graphic_cube.rs  helper.rs  lib.rs  main.rs  solver.rs  step.rs
src/shader/: frag.glsl  vert.glsl
