[package]
name = "rubik"
version = "1.0.0"
edition = "2018"

[[bin]]
name = "animate"

[[bin]]
name = "rubik"
path = "src/bin/simulator.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.2"
cgmath = "*"
enum-map = "*"
rand = "*"
glium-glyph = "*"
stopwatch = "*"
strum = "*"
strum_macros = "*"
