[package]
name = "rubik"
authors = ["Alan Sartorio"]
description = "A keyboard driven virtual Rubik's cube made in rust."
homepage = "https://github.com/alansartorio/rubik"
repository = "https://github.com/alansartorio/rubik"
license = "MIT"
version = "1.2.0"
edition = "2018"
default-run = "rubik"

[[bin]]
name = "solver"

[[bin]]
name = "scrambler"

[[bin]]
name = "animate"

[[bin]]
name = "rubik"
path = "src/bin/simulator.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
cgmath = "*"
enum-map = "*"
rand = "*"
glium-glyph = { git = "https://github.com/est31/glium-glyph.git" }
stopwatch = "*"
strum = "*"
strum_macros = "*"
bimap = "*"
lazy_static = "*"
