[package]
name = "rubik"
authors = ["Alan Sartorio"]
description = "A keyboard driven virtual Rubik's cube made in rust."
homepage = "https://github.com/alansartorio/rubik"
repository = "https://github.com/alansartorio/rubik"
license = "MIT"
version = "1.2.0"
edition = "2018"
default-run = "rubik"

[[bin]]
name = "solver"

[[bin]]
name = "scrambler"

[[bin]]
name = "animate"

[[bin]]
name = "rubik"
path = "src/bin/simulator.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.36"
cgmath = "0.18"
enum-map = "2.7"
rand = "0.10"
glium-glyph = { git = "https://github.com/est31/glium-glyph" }
stopwatch = "0.0.7"
strum = "0.28"
strum_macros = "0.28"
bimap = "0.6"
lazy_static = "1.5"
